# mujina

./: .gitignore  BUILD.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml
.github/DISCUSSION_TEMPLATE/: issue-triage.yml
.github/ISSUE_TEMPLATE/: config.yml  preapproved.md
docs/: architecture.md
mujina-miner/: Cargo.toml
mujina-miner/src/: backplane.rs  board_manager.rs  config.rs  daemon.rs  error.rs  job_generator.rs  scheduler.rs  tracing.rs
mujina-miner/src/api/: mod.rs  v1.rs
mujina-miner/src/api_client/: mod.rs  types.rs
mujina-miner/src/asic/: mod.rs
mujina-miner/src/asic/bm13xx/: PROTOCOL.md  error.rs  mod.rs  protocol.rs  test_data.rs
mujina-miner/src/board/: bitaxe.rs  mod.rs
mujina-miner/src/hash_thread/: bm13xx.rs
mujina-miner/src/hw_trait/: mod.rs
mujina-miner/src/job_source/: dummy.rs  extranonce2.rs  merkle.rs  mod.rs  stratum_v1.rs
mujina-miner/src/job_source/stratum_v2/: client.rs  messages.rs  mod.rs  state.rs
mujina-miner/src/mgmt_protocol/: mod.rs
mujina-miner/src/mgmt_protocol/bitaxe_raw/: channel.rs  mod.rs
mujina-miner/src/peripheral/: emc2101.rs  mod.rs  pmbus.rs  tps546.rs
mujina-miner/src/pool/: mod.rs
mujina-miner/src/stratum_v1/: client.rs  messages.rs
mujina-miner/src/transport/: mod.rs  serial.rs  usb.rs
tools/mujina-dissect/: Cargo.toml
tools/mujina-dissect/src/: capture.rs  dissect.rs  i2c.rs  main.rs  output.rs  serial.rs
