[package]
name = "mujina-miner"
version = "0.1.0"
edition.workspace = true
description = "Bitcoin mining software"
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "mujina-minerd"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bitcoin = { workspace = true }
bitflags = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
crc_all = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
inventory = { workspace = true }
modular-bitfield = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-serial = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-journald = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rustix = { workspace = true }
slotmap = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }

# Stratum V2 dependencies (aligned with sv2-apps v0.1.0)
stratum-core = "0.1.0"
stratum-apps = { git = "https://github.com/stratum-mining/sv2-apps", tag = "v0.1.0", features = ["network"] }
async-channel = "1.8.0"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-udev = { workspace = true }
udev = { workspace = true }

[[bin]]
name = "mujina-minerd"
path = "src/bin/minerd.rs"

[[bin]]
name = "mujina-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mujina-tui"
path = "src/bin/tui.rs"

[features]
default = []
skip-pty-tests = []  # Skip PTY-based serial tests that may hang in some environments

[dev-dependencies]
test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
