[package]
name = "mujina-dissect"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Kuester <rkuester@insymbols.com>"]
license = "GPL-3.0-or-later"
description = "Protocol dissector for Saleae Logic 2 captures of Bitcoin mining hardware"

[[bin]]
name = "mujina-dissect"
path = "src/main.rs"

[dependencies]
# Core miner library for protocol definitions
mujina-miner = { path = "../../mujina-miner" }

# CLI and utilities
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"

# CSV parsing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Time handling
chrono = "0.4"

# Output formatting
colored = "2.0"

# Hex formatting
hex = "0.4"

# Logging (optional)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }